# Neuro-Pipeline

./: .gitignore  CHANGELOG.md  ROADMAP.md  pyproject.toml  readme.md
.github/workflows/: deploy.yml
config/: config.yaml
config/project_config/: branch_config.yaml  dagtest_config.yaml  test_config.yaml
config/results_check/: dagtest_checks.yaml
docs/: index.md  myst.yml
docs/cli-reference/: database-commands.md  index.md  run.md  utility-commands.md
docs/configuration/: hpc-config.md  output-checks.md  pipeline-config.md  project-config.md
docs/getting-started/: full-pipeline.md  index.md
docs/gui/: index.md
docs/how-to/: add-custom-task.md  debug-failures.md  post-run-verification.md  rerun-subjects.md
docs/internals/: dag-execution.md  dev-test-configs.md  logging-resume.md  wrapper-slurm.md
docs/pipeline-reference/: bids-pipeline.md  common-scenarios.md  index.md  intermed.md  prep.md  qc.md  staged-pipeline.md
src/neuro_pipeline/config/: config.yaml
src/neuro_pipeline/config/project_config/: branch_config.yaml  dagtest_config.yaml  template_config.yaml  test_config.yaml
src/neuro_pipeline/config/results_check/: branch_checks.yaml  template_checks.yaml
src/neuro_pipeline/interface/: app.py  callbacks.py  job_monitor_callbacks.py  run_gui.py
src/neuro_pipeline/interface/assets/: theme.css  theme_switch.js
src/neuro_pipeline/interface/callbacks/: __init__.py  analysis_callbacks.py  config_callbacks.py  job_monitor_callbacks.py
src/neuro_pipeline/interface/components/: analysis_control.py  job_monitor.py  pipeline_viewer.py  project_config.py
src/neuro_pipeline/interface/utils/: __init__.py  plot_utils.py
src/neuro_pipeline/pipeline/: __init__.py  core.py  dag.py
src/neuro_pipeline/pipeline/config/: __init__.py  config.yaml  hpc_config.yaml
src/neuro_pipeline/pipeline/scripts/: dcm2bids_convert_BIDS.sh  merge_logs.py  mriqc_group.sh  mriqc_individual.sh  unzip_rename.sh  xcpd_rs.sh
src/neuro_pipeline/pipeline/utils/: __init__.py  bids_validation.py  config_utils.py  db_backup.py  detect_subjects.py  hpc_utils.py  (+10 more)
src/neuro_pipeline/scripts/: __init__.py
tests/: conftest.py  generate_sample_report.py  test_config_callbacks.py  test_config_utils.py  test_core.py  test_dag.py  test_dag_visualization.py  test_db_backup.py  test_detect_subjects.py  test_hpc_utils.py  test_init_utils.py  test_input_dir_resolution.py  test_job_db.py  test_job_monitor_callbacks.py  test_merge_logs.py  test_output_checker.py  test_pbs_backend.py  test_plot_utils.py  test_preflight.py  test_report_generator.py  test_resume.py  test_ui_layout.py
(+52 files in other folders)
