[project]
name = "GCDS_Neuro_Pipeline"
version = "0.12.1_alpha"
description = "GCDS neuro pipeline project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Qiuyu Yu", email = "qiuyuyu.psych@gmail.com" },
  { name = "Charles Geier"}
]
maintainers = [
  { name = "Qiuyu Yu", email = "qiuyuyu.psych@gmail.com" }
]
dependencies = [
  "typer",
  "PyYAML",
  "dash",
  "dash-bootstrap-components",
  "plotly",
  "pandas",
  "matplotlib"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuro_pipeline*"]

[project.scripts]
neuropipe = "neuro_pipeline.pipeline.core:app"
neuropipe-gui = "neuro_pipeline.interface.run_gui:main"