[project]
name = "neuroimage-pipe"
version = "0.14.0-alpha"
description = "Neuroimage pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Qiuyu Yu", email = "qiuyuyu.psych@gmail.com" },
]
maintainers = [
  { name = "Qiuyu Yu", email = "qiuyuyu.psych@gmail.com" }
]
dependencies = [
  "typer",
  "PyYAML",
  "dash",
  "dash-cytoscape",
  "dash-bootstrap-components",
  "plotly",
  "pandas",
  "matplotlib",
  "pybids"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuro_pipeline*"]

[project.scripts]
neuropipe = "neuro_pipeline.pipeline.core:app"
neuropipe-gui = "neuro_pipeline.interface.run_gui:main"